Replaced copyright sign

--- a/itis3135/components/footer.html
+++ b/itis3135/components/footer.html
@@ -12,7 +12,7 @@
                     <li><a href="https://www.codecademy.com/profiles/pchapin1">Codecademy</a></li>
                 </ul>
                 <ul>
-                <li><p id="copyright">Designed by Playful Cats Enterprises, © 2025</li>
+                <li><p id="copyright">Designed by Playful Cats Enterprises, &copy; 2025</li>
                 <li>||</li>
                 <li><p>Certified in <a href="https://www.freecodecamp.org/certification/pchapin/responsive-web-design">Responsive Web Design</a></p></li>
                 <a href="https://validator.w3.org/check?uri=referer" id="validation_link_html">
