--- a/whimsical/styles/default.css
+++ b/whimsical/styles/default.css
@@ -21,9 +21,14 @@
 
 body {
     color: var(--primary-dark);
-    background-color: var(--primary-light);
+/*     background-color: var(--primary-light); */
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     margin: 0;
+    background-image: url('../images/8o2hys8o2hys8o2h.jpg');
+    background-size: cover; /* Fill the entire page */
+    background-repeat: no-repeat; /* Prevent image repetition */
+    background-attachment: fixed; /* Keep image fixed during scrolling */
+    margin: 0; /* Remove default body margin */
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -165,7 +170,7 @@ teal-text {
 }
 
 main {
-    padding: 20px 20px;
+    padding: 10px 10px;
     box-sizing: border-box;
     background-color: var(--main-bg);
 }
