--- a/whimsical/styles/default.css
+++ b/whimsical/styles/default.css
@@ -303,3 +303,24 @@ main div,
 .section div:last-child {
     margin-bottom: 0; /* Remove bottom margin from the last paragraph */
 }
+.header-main-gap {
+    height: 20px; /* Adjust height as needed */
+    background-color: transparent; /* Or any other color you prefer */
+}
+.header {
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
+.footer {
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
+
+main, .section {
+    border-radius: 10px;
+}
+.profile-container {
+    border-radius: 10px; /* Rounds all four corners of the profile container */
+}
+
