--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -74,3 +74,41 @@ li > a {
     border-radius: 5px;
     margin: 10px 0;
 }
+
+.introduction-section {
+    background-color: #373e4a;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    color: #d1d5db;
+}
+
+.introduction-section img {
+    max-width: 100%;
+    height: auto;
+    margin-top: 20px;
+    border-radius: 10px; /* Adjust the radius as needed */
+}
+
+main {
+    background-color: #373e4a;
+    color: #d1d5db;
+    max-width: 800px;
+    margin: 20px auto;
+    padding: 10px 20px; /* Reduced top/bottom padding */
+    line-height: 1.6;
+}
+
+main h1, main h2, main h3 {
+    color: #98c379;
+}
+
+main a {
+    color: #66bb6a;
+    text-decoration: none;
+}
+
+main a:hover {
+    text-decoration: underline;
+}
