--- a/itis3135/components/footer.html
+++ b/itis3135/components/footer.html
@@ -1,28 +1,33 @@
-        <footer>
-            <nav>
-                <ul>
-                    <li><a href="https://webpages.charlotte.edu/pchapin/">Home Page</a></li>
-                    <li>||</li>
-                    <li><a href="https://puzzle5.github.io/">GitHub Page</a></li>
-                    <li>||</li>
-                    <li><a href="https://github.com/Puzzle5/puzzle5.github.io">GitHub Project</a></li>
-                    <li>||</li>
-                    <li><a href="https://www.freecodecamp.org/pchapin">FreeCodeCamp</a></li>
-                    <li>||</li>
-                    <li><a href="https://www.codecademy.com/profiles/pchapin1">Codecademy</a></li>
-                </ul>
-            </nav>
-            <ul>
-                <li><p id="copyright">Designed by Playful Cats Enterprises, &copy; 2025</li>
-                <li>||</li>
-                <li><p>Certified in <a href="https://www.freecodecamp.org/certification/pchapin/responsive-web-design">Responsive Web Design</a></p></li>
-            </ul>
-                <a href="https://validator.w3.org/check?uri=referer" id="validation_link_html">
-                    <img style="border:0;width:88px;height:31px" src="https://mytienhoang.github.io/itis3135/z_archives/html_validation.png" alt="Valid HTML!">
-                </a>
-                <script>
-                    document.getElementById("validation_link_html").setAttribute("href","https://validator.w3.org/check?uri=" + location.href);
-                    document.getElementById("validation_link_css").setAttribute("href","https://jigsaw.w3.org/css-validator/validator?uri=" + location.href);
-                </script>
+<footer>
+    <nav>
+        <ul>
+            <li><a href="https://webpages.charlotte.edu/pchapin/">Home Page</a></li>
+            <li>|</li>
+            <li><a href="https://puzzle5.github.io/">GitHub Page</a></li>
+            <li>|</li>
+            <li><a href="https://github.com/Puzzle5/puzzle5.github.io">GitHub Project</a></li>
+            <li>|</li>
+            <li><a href="https://www.freecodecamp.org/pchapin">FreeCodeCamp</a></li>
+            <li>|</li>
+            <li><a href="https://www.codecademy.com/profiles/pchapin1">Codecademy</a></li>
+        </ul>
+    </nav>
 
-        </footer>
+    <div class="footer-info">
+        <p id="copyright">Designed by Playful Cats Enterprises, &copy; 2025</p>
+        <p>Certified in <a href="https://www.freecodecamp.org/certification/pchapin/responsive-web-design">Responsive Web Design</a></p>
+    </div>
+
+    <a href="https://validator.w3.org/check?uri=referer" id="validation_link_html">
+        <img style="border:0;width:88px;height:31px" src="https://mytienhoang.github.io/itis3135/z_archives/html_validation.png" alt="Valid HTML!">
+    </a>
+
+    <a href="https://jigsaw.w3.org/css-validator/validator?uri=referer" id="validation_link_css">
+        <img style="border:0;width:88px;height:31px" src="https://mytienhoang.github.io/itis3135/z_archives/css_validation.png" alt="Valid CSS!">
+    </a>
+
+    <script>
+        document.getElementById("validation_link_html").setAttribute("href", "https://validator.w3.org/check?uri=" + location.href);
+        document.getElementById("validation_link_css").setAttribute("href", "https://jigsaw.w3.org/css-validator/validator?uri=" + location.href);
+    </script>
+</footer>
