--- a/itis3135/components/footer.html
+++ b/itis3135/components/footer.html
@@ -2,13 +2,13 @@
     <nav>
         <ul>
             <li><a href="https://webpages.charlotte.edu/pchapin/">Home Page</a></li>
-            <li>||</li>
+            <li class="separator">||</li>
             <li><a href="https://puzzle5.github.io/">GitHub Page</a></li>
-            <li>||</li>
+            <li class="separator">||</li>
             <li><a href="https://github.com/Puzzle5/puzzle5.github.io">GitHub Project</a></li>
-            <li>||</li>
+            <li class="separator">||</li>
             <li><a href="https://www.freecodecamp.org/pchapin">FreeCodeCamp</a></li>
-            <li>||</li>
+            <li class="separator">||</li>
             <li><a href="https://www.codecademy.com/profiles/pchapin1">Codecademy</a></li>
         </ul>
     </nav>
