--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -1,4 +1,4 @@
-        <header>
+        <header class="header">
             <h1>Proud Cobra || ITIS-3135</h1>
             <nav>
                 <ul>
