Updated footer to reflect current mascot

--- a/itis3135/components/footer.html
+++ b/itis3135/components/footer.html
@@ -14,14 +14,14 @@
     </nav>
 
     <div class="footer-info">
-        <p id="copyright">Designed by Playful Cats Enterprises, &copy; 2025</p>
+        <p id="copyright">Designed by Proud Cobra Enterprises, &copy; 2025</p> ||
         <p>Certified in <a href="https://www.freecodecamp.org/certification/pchapin/responsive-web-design">Responsive Web Design</a></p>
     </div>
 
     <div class="validator-container">
         <a href="https://validator.w3.org/check?uri=referer" id="validation_link_html">
             <img style="border:0;width:88px;height:31px" src="https://mytienhoang.github.io/itis3135/z_archives/html_validation.png" alt="Valid HTML!">
-        </a> ||
+        </a>
 
         <a href="https://jigsaw.w3.org/css-validator/validator?uri=referer" id="validation_link_css">
             <img style="border:0;width:88px;height:31px" src="https://mytienhoang.github.io/itis3135/z_archives/css_validation.png" alt="Valid CSS!">
