--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -1,12 +1,15 @@
-        <header class="header">
-            <h1>Proud Cobra || ITIS-3135</h1>
-            <nav>
-                <ul>
-                    <li><a href="./">Home</a></li>
-                    <li>||</li>
-                    <li><a href="introduction.html">Introduction</a></li>
-                    <li>||</li>
-                    <li><a href="contract.html">Contract</a></li>
-                </ul>
-            </nav>
-        </header>
+            <header class="header">
+                <div class="header-content">
+                    <a href="./">
+                        <img src="images/proudcobralogo.png" alt="Proud Cobra Logo" class="logo">
+                    </a>
+                    <h1>Proud Cobra || ITIS-3135</h1>
+                </div>
+                <nav>
+                    <ul>
+                        <li><a href="./">Home</a></li>
+                        <li><a href="introduction.html">Introduction</a></li>
+                        <li><a href="contract.html">Contract</a></li>
+                    </ul>
+                </nav>
+            </header>
