--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -136,19 +136,8 @@ main ul {
     background-color: #3e4451;
     padding: 10px;
     display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-}
-
-.header nav ul {
-    display: flex;
-    list-style: none;
-    padding: 0;
-    margin: 10px 0 0 0;
-}
-
-.header nav ul li {
-    margin: 0 10px;
+    justify-content: space-between;
+    align-items: center;
 }
 
 footer {
@@ -206,7 +195,7 @@ footer a#validation_link_html, footer a#validation_link_css {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 10px 0;
+    margin: 10px auto;
     gap: 20px;
     width: fit-content;
 }
