--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -140,6 +140,17 @@ main ul {
     align-items: center;
 }
 
+.header nav ul {
+    display: flex;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.header nav ul li {
+    margin: 0 10px;
+}
+
 footer {
     background-color: #3e4451;
     padding: 10px;
