--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -7,6 +7,8 @@
                     <li><a href="introduction.html">Introduction</a></li>
                     <li>||</li>
                     <li><a href="contract.html">Contract</a></li>
+                    <li>||</li>
+                    <li><a href="hobby/index.html">Hobby</a></li>
                 </ul>
             </nav>
         </header>
