Initial website evaluation page

--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -9,6 +9,8 @@
                     <li><a href="contract.html">Contract</a></li>
                     <li>||</li>
                     <li><a href="hobby/index.html">Hobby</a></li>
+                    <li>||</li>
+                    <li><a href="hobby/website-evaluations.html">Evaluations</a></li>
                 </ul>
             </nav>
         </header>
