--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -10,7 +10,7 @@
                     <li>||</li>
                     <li><a href="hobby/index.html">Hobby</a></li>
                     <li>||</li>
-                    <li><a href="hobby/website-evaluations.html">Evaluations</a></li>
+                    <li><a href="website-evaluations.html">Evaluations</a></li>
                 </ul>
             </nav>
         </header>
