Fixed max width?

--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -1,3 +1,11 @@
+html {
+    box-sizing: border-box;
+}
+
+*, *:before, *:after {
+    box-sizing: inherit;
+}
+
 body {
     background-color: #282c34;
     color: #d1d5db;
