--- a/itis3135/components/footer.html
+++ b/itis3135/components/footer.html
@@ -10,6 +10,8 @@
             <li><a href="https://www.freecodecamp.org/pchapin">FreeCodeCamp</a></li>
             <li class="separator">||</li>
             <li><a href="https://www.codecademy.com/profiles/pchapin1">Codecademy</a></li>
+            <li>||</li>
+            <li><a href="hobby/index.html">Hobby</a></li>
         </ul>
     </nav>
 
