--- a/itis3135/components/footer.html
+++ b/itis3135/components/footer.html
@@ -19,19 +19,5 @@
         <p id="copyright">Designed by Proud Cobra Enterprises, &copy; 2025</p> ||
         <p>Certified in <a href="https://www.freecodecamp.org/certification/pchapin/responsive-web-design">Responsive Web Design</a></p>
     </div>
-
-    <div class="validator-container">
-        <a href="https://validator.w3.org/check?uri=referer" id="validation_link_html">
-            <img src="https://mytienhoang.github.io/itis3135/z_archives/html_validation.png" alt="Valid HTML!">
-        </a>
-
-        <a href="https://jigsaw.w3.org/css-validator/validator?uri=referer" id="validation_link_css">
-            <img src="https://mytienhoang.github.io/itis3135/z_archives/css_validation.png" alt="Valid CSS!">
-        </a>
-    </div>
-
-    <script>
-        document.getElementById("validation_link_html").setAttribute("href", "https://validator.w3.org/check?uri=" + location.href);
-        document.getElementById("validation_link_css").setAttribute("href", "https://jigsaw.w3.org/css-validator/validator?uri=" + location.href);
-    </script>
+    <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </footer>
